objects/ccrz__E_ProductInventoryItem__c.object
<CustomObject>
    <description>Maps product to available quantity</description>
    <fields>
        <fullName>ccrz__AvailabilityMessageRT__c</fullName>
        <description>Rich text field for Availability Messages such as &quot;Available&quot; or &quot;BackOrder&quot;.</description>
        <label>Availability Message RT</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>Availability Messages such as &quot;Available&quot; or &quot;BackOrder&quot;.</description>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__InventoryLocationCode__c</fullName>
        <description>Location code for inventory warehouse.</description>
        <label>Inventory Location code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which the inventory is being specified</description>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Inventory Items</relationshipLabel>
        <relationshipName>Product_Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__QtyAvailable__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Numeric quantity corresponding to the inventory level</description>
        <label>Qty Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>Inventory item status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Pre Order</fullName>
                </value>
                <value>
                    <fullName>Back Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_Crate_Engine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Crate Engine Product</description>
        <label>dbu Crate Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Quantity_Status__c</fullName>
        <label>dbu Quantity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Product Inventory Item</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductInventoryItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Product Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>